# vaccel-rs

./: Cargo.toml
plugins/core/: Cargo.toml
plugins/core/src/: lib.rs
plugins/noop/: Cargo.toml
plugins/noop/src/: lib.rs
src/: lib.rs  resource.rs  server.rs  session.rs
src/tensorflow/: models.rs
vaccel/: Cargo.toml
vaccel-agent/: Cargo.toml
vaccel-agent/src/: cli.rs  main.rs
vaccel/examples/: session.rs  tf_model.rs
vaccel/src/: client.rs  lib.rs  plugin.rs  resource.rs  server.rs  session.rs
vaccel/src/tensorflow/: models.rs
